@@ -1,3 +1,9 @@
+2009-09-04  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	Added shellutils using libportage provided by Patrick Lauer:
+	* bin/lp_atomcompare.c: added.
+	* bin/lp_isatom.c: added.
+
 2009-08-30  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	Fixed lputil_int64len test:
